<resources>
    <string name="app_name">Кинотеатр Октябрь</string>
    <string name="title_activity_main">Кинотеатр Октябрь</string>
       <string name="Abaut_text">
       ++++++++++
         \n
           2019 , Deomin Dmitriy
         \n
         E-mail:58627@bk.ru
        \n
        libraries used:
        \n
         * jsoup:org.jsoup:jsoup:1.9.2
         \n
         * listviewanimations:com.nhaarman.listviewanimations:lib-core:3.1.0@aar
         \n
         * supertoasts:com.github.johnpersano:supertoasts:1.3.4@aar
         \n
         * shimmer:com.romainpiel.shimmer:library:1.4.0@aar
        \n
        * picasso:com.squareup.picasso:picasso:2.5.2
         \n
        * expandable-layout:com.github.aakira:expandable-layout:1.5.1@aar
         \n
         * color-picker-view:com.github.danielnilsson9:color-picker-view:1.4.0@aar
         \n
         * floatlabel:com.iangclifton.android:floatlabel:1.0.4
         \n
         * Android View Animations
         \n
         * TouchImageView
         \n\n
         Информация берется с http://michurinsk-film.ru
         \n\n
    </string>
    <string name="banner_ad_unit_id">ca-app-pub-7908895047124036/3786996300</string>
    <string name="title_activity_ava_news">Подробности новости</string>
    <string name="title_activity_add_otziv">Добавить отзыв</string>
    <string name="title_activity_user_login_parol">Авторизация</string>
    <string name="title_activity_ava_skoro">Скоро</string>
    <string name="title_activity_registracia">Регистрация</string>
    <string name="title_activity_mamori">Вспомнить пароль</string>
    <string name="title_activity_add_vopr">Задать вопрос</string>
    <string name="title_activity_ava_vopr">Вопрос-ответ</string>
    <string name="title_activity_pravila_kinoteatra">Правила кинотеатра "Октябрь"</string>
    <string name="title_activity_kabinet">Личный кабинет</string>
    <string name="title_activity_history_chat">История</string>
    <string name="title_activity_text_history">История</string>
    <string name="title_activity_user__online">Пользователи</string>
    <string name="news_strin">Новости</string>
    <string name="sesions_string">Расписание\nсеансов</string>
    <string name="skoro_string">Скоро</string>
    <string name="щеяшмш_ыекштп">Отзывы</string>
    <string name="vopros_string">Вопрос\nответ</string>
    <string name="zali_string">Чат</string>
    <string name="mani_string">Инфо</string>
    <string name="mail_string">Написать письмо\n58627@bk.ru</string>
    <string name="gruppa_string">Группа vk</string>
    <string name="close_string">Закрыть</string>
    <string name="pravila_kinoteatra">ПРАВИЛА ПОСЕЩЕНИЯ КИНОТЕАТРА «ОКТЯБРЬ» \nКинотеатр «Октябрь» (далее Кинотеатр) располагается по адресу:г. Мичуринск, ул. Советская, д. 306 \nОсновной целью Кинотеатра является показ аудиовизуальных произведений (согласно постановлению Правительства РФ от 17.11.2000 года № 859) и дополнительные услуги по организации досуга населения. \nКинотеатр является заведением, свободным для посещения населением. \nПравила посещение Кинотеатра регламентируют поведение посетителей (гостей)в Кинотеатре и устанавливаются администрацией Кинотеатра, утверждаются Генеральным директором. \nСоблюдение Правил посещения Кинотеатра обязательно для посетителей. \nКонтроль за исполнением Правил посещения Кинотеатра возлагается на сотрудников службы безопасности кинотеатра. \nПомещения Кинотеатра, открытые для свободного доступа посетителей: \nСиний зал – кинозал, рассчитанный на 100 посадочных мест,предназначенный для просмотра кинофильмов на проекционном экране. \nКрасный зал – кинозал, рассчитанный на 288 посадочных мест,предназначенный для просмотра кинофильмов на проекционном экране. \nЗеленый зал зал – кинозал, рассчитанный на 112 посадочных мест предназначенный для просмотра фильмов на проекционном экране. \nКассовая зона – место продажи билетов в кино. \nГеймзона – игровые автоматы, расположены в фойе 1-го этажа.(точка общественного питания, место продажи жетонов к игровым автоматам). \nКлуб ПодОктябрем - расположен в подвальном помещении кинотеатра.Имеет собственный гардероб и отдельный вход. \nКафе «Яблоко» - расположено на 2-м этаже кинотеатра. \nГардероб – помещение для сдачи на хранение верхней одежды,расположен на 1-м этаже (работает сезонно). \nМужская и женская туалетные комнаты – расположены на 1-м этаже. \nВремя работы Кинотеатра: \nЗрительные залы – с 9:00 до окончания последнего сеанса; \nКассовая зона – с 9:00 до 20 минут после начала последнего сеанса; \nКофейня и кино-бар - с 9:00 до окончания последнего сеанса; \nКафе «Яблоко» - с 11:00 до 0:00; \nКлуб \"ПодОктябрем\" - с 10:00 до 4:00 ( пт., сб. - до 6:00) \nГеймзона – с 9:00 до окончания последнего сеанса; \nГардероб – с 9:00 до закрытия кафе «Яблоко» (исключая летнее время); \nМужская и женская туалетные комнаты (работают только для зрителей Кинотеатра и посетителей кафе «Яблоко») - с 9:00 до закрытия кафе «Яблоко». \nПосетители имеют право: \nПользоваться предоставляемыми услугами в соответствии с установленными ценами. \nПолучать сервисное обслуживание надлежащего качества. \nПолучать информацию и рекламные материалы на фильмы текущего и будущего репертуара. \nПолучать информацию об услугах и скидках на услуги Кинотеатра. \nВносить свои замечания в Книгу отзывов и предложений (книга находится у администраторов смены). \nОбращаться с претензиями по вопросам реализации услуг кинотеатром к Администрации кинотеатра в течение рабочего дня \nПосетитель имеет право оспорить действия сотрудников Службы безопасности у Администрации Кинотеатра, но лишь после того, как все требования сотрудника Службы безопасности будут им выполнены. \nПосетителям запрещается: \nПриносить в Кинотеатр продукты питания, алкогольные и безалкогольные напитки. \nПосещать Кинотеатр в состоянии алкогольного или наркотического опьянения. \nПроносить в Кинотеатр любые виды огнестрельного, газового и холодного оружия, независимо от наличия документов, дающих право на его хранение и ношение (кроме сотрудников правоохранительных органов, имеющих табельное оружие и посетивших Кинотеатр по служебной необходимости). \nПроносить в Кинотеатр любые виды наркотических и огнеопасных веществ. \nПроизводить и использовать во время сеанса в кинозале фото-, видео- и аудиозаписи, в том числе, на мобильные телефоны, а также использовать другие технические средства, различного рода информационные схемы и алгоритмы. \nУщемлять права других посетителей. Шуметь и мусорить в Кинотеатре. \nКурить в помещениях Кинотеатра, кроме специально отведенных для этого мест (на улице перед центральным входом в Кинотеатр). \nПосещать Кинотеатр с сумками, либо с другими предметами, превышающими по высоте, ширине, либо по длине 0,5 м. \nПосещать Кинотеатр в грязной одежде и обуви. \nПроходить в Кинотеатр с животными. \nНаносить ущерб имуществу Кинотеатра. \nПроходить в кинозал без билета, купленного в кассе Кинотеатра. \nЗаходить в служебные помещения Кинотеатра. \nСовершать действия, мешающие досугу посетителей Кинотеатра. \nСлужба охраны кинотеатра вправе: \nТребовать от посетителей соблюдения Правил посещения Кинотеатра «Октябрь». \nПопросить посетителя показать содержимое сумки. \nПрименять металлодетектор. \nБез объяснения вывести посетителя, нарушающего порядок, за территорию Кинотеатра. \nПри необходимости, вызвать наряд милиции. \nЗа отказ выполнения данных требований службы безопасности, отказать в допуске на территорию Кинотеатра. \nСлужба безопасности кинотеатра обязана: \nОбеспечивать защиту жизни, здоровья, достоинства и личной собственности посетителей от противоправных посягательств. \nЗащищать интересы и сохранять имущество Кинотеатра. \nПосещая сеансы в 3D, посетители безусловно соглашаются со следующим: \n- ЗD очки являются собственностью кинотеатра и посетитель с момента их получения до сдачи контролеру несет за них полную материальную ответственность. \n- В случае невозврата или порчи очков посетителем после просмотра 3D фильма, администрация вправе взыскать их стоимость (1000 рублей) с виновного лица. \n- Кинотеатр не несет ответственности за возможный дискомфорт для глаз носителя от просмотра фильма в формате ЗD. Если у Вас есть проблемы со зрением, перед походом в кинотеатр проконсультируйтесь с врачом. \n- Родитель ребенка сам определяет степень возможности восприятия ЗD фильма ребенком. \n- Если Вы носите очки, то ЗD очки необходимо надевать поверх очков с диоптриями. \nАдминистрация оставляет за собой право удалить нарушителя настоящих правил из кинотеатра без возврата затраченных денежных средств на предоставленные услуги.</string>
    <string name="netu_internetu">Нету интернету</string>
    <string name="potanite_dla_obnovlenia">Потяните вниз для обновления</string>
</resources>